<resources>
    <!--Global-->
    <string name="app_name">Charity GO!</string>

    <!--About Us-->
    <string name="view_btn">View Sponsors</string>
    <string name="title_activity_about">About Us</string>
    <string name="about_text_mission">To encourage Malaysians, regardless of ethnicity, gender or religion to stay healthy by walking and to help charitable organizations across the peninsular through the use of a singular, mobile application.</string>
    <string name="about_title_mission">Our Mission</string>
    <string name="about_title_vision">Our Vision</string>
    <string name="about_text_vision">A healthier Malaysia where people are encouraged to walk and it\'s citizens are inspired to help those who are in need.</string>
    <string name="about_title_promise">Our Promise</string>
    <string name="about_text_promise">All proceeds from our sponsors will be donated 100% to charitable organizations throughout Malaysia.</string>
    <string name="about_title_help">How You Can Help</string>
    <string name="about_text_help">Just by using this app and participating, you\'re already changing the lives of those in need across Malaysia. Want to do more? Contact the charitable organization of your liking and enquire for any voluntary positions!</string>
    <string name="about_title_sponsor">How We Got Our Funds</string>
    <string name="about_text_sponsor">We are a non-profit organizations, we got all our funds from sponsors all around Malaysia, thanks to them, we are able to make this happen. To know more about these lifesavers, click on the button to know more.</string>

    <!--Main Menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Points</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This Username is Invalid !</string>
    <string name="error_invalid_password">Password Cannot Be Blanked !</string>
    <string name="invalid_password">Invalid Password Entered !</string>
    <string name="error_incorrect_password">This password is Incorrect !</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t Have An Account?</string>
    <string name="action_register">Register</string>
    <string name="sponsor_label">Sponsors</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_retype">Retype Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone">Contact Number</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_email">Email</string>
    <string name="action_signup">Sign Up Now!</string>
    <string name="label_register">Register An Account</string>
    <string name="label_forgot">Password Recovery</string>
    <string name="hint_code">Code</string>

    <string name="title_activity_organization">Organizations</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!--Sponsor Info-->
    <string name="info_text_sponContact">Click on the button below to view their popular YouTube videos</string>
    <string name="info_text_sponAbout">We develop softwares for Malaysia, businesses, gaming, you name it!</string>
    <string name="info_text_sponBackground">Subscribe to Pewdiepie to join the 9 Year Old Army!</string>
    <string name="play_video">Play Video</string>
    <string name="info_text_donation">Total Fundings</string>

    <!--Profile Info-->
    <string name="profile_name">Profile</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="send_btn">Send</string>
    <string name="verify_btn">Verify</string>
    <string name="recreate_label">Recreate Password</string>
    <string name="save_btn">Save</string>
    <string name="welcome_message">Welcome To Charity Go !</string>

    <!--Organization Info-->
    <string name="title_activity_organization_info">Organization Info</string>
    <string name="info_title_background">Background</string>
    <string name="info_text_background">info_text_background</string>
    <string name="info_title_about">What they do</string>
    <string name="info_text_about">info_text_about</string>
    <string name="info_title_contact">Channels</string>
    <string name="info_text_contact">info_text_contact</string>

    <!--Donate-->
    <string name="donate_title_user">You Have:</string>
    <string name="donate_points_default">donate_points_default</string>
    <string name="donate_title_donate">Donate:</string>
    <string name="donate_editText_amount">Enter amount</string>
    <string name="donate_title_org">They Need:</string>
    <string name="donate_button_donate">Donate Points!</string>
    <string name="donate_conversion_rate_steps">500 steps = 1 point</string>
    <string name="donate_conversion_rate_points">1 point = RM0.10</string>
    <string name="action_trans_history">Transaction History</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_setting">SettingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_voucher">VoucherActivity</string>

</resources>
